--- a/src/share/_helpers.scss
+++ b/src/share/_helpers.scss
@@ -1,6 +1,3 @@
-@import 'colors';
-@import 'brakepoints';
-
 @function breakpoint($breakpoint) {
   @return map-get($breakpoints, $breakpoint);
 }
@@ -14,6 +11,14 @@
 
 @function color($keys...) {
   $map: $colors;
+  @each $key in $keys {
+    $map: map-get($map, $key);
+  }
+  @return $map;
+}
+
+@function size($keys...) {
+  $map: $font-sizes;
   @each $key in $keys {
     $map: map-get($map, $key);
   }
